enabled the image uploads
